Add lines and refactor main

--- a/src/styles/_typography.scss
+++ b/src/styles/_typography.scss
@@ -1,4 +1,5 @@
-$font-secondary: 'Lato', sans-serif;
+$font-logo: 'Raleway', sans-serif;
+$font-secondary: 'Roboto', sans-serif;
 
 .font-secondary {
   font-family: $font-secondary !important;
@@ -6,16 +7,23 @@ $font-secondary: 'Lato', sans-serif;
 
 // typography
 .text-hero {
-  font-size: 72px;
-  line-height: 72px;
+  font-size: 6rem;
+  line-height: 6rem;
   font-weight: 300;
   letter-spacing: 0.5px;
   font-family: $font-secondary;
-
   @media #{map-get($display-breakpoints, 'sm-and-down')} {
     font-size: 48px;
     line-height: 56px;
   }
+}
+
+.font-simple {
+  font-family: 'Nixie One', sans-serif;
+}
+
+.font-soph {
+  font-family: 'Abril Fatface', sans-serif;
 }
 
 .text-card-title-1 {
@@ -33,11 +41,14 @@ $font-secondary: 'Lato', sans-serif;
 }
 
 .text-lede {
-  font-size: 36px;
-  line-height: 48px;
-  font-weight: 300;
-  letter-spacing: 0.5px;
-  font-family: $font-secondary;
+  font-size: 3rem;
+  font-weight: 800;
+  letter-spacing: -0.25rem;
+  font-family: $font-logo;
+  color: white;
+  -webkit-text-fill-color: white;
+  -webkit-text-stroke-width: 2px;
+  -webkit-text-stroke-color: white;
 
   @media #{map-get($display-breakpoints, 'sm-and-down')} {
     font-size: 28px;
@@ -46,9 +57,9 @@ $font-secondary: 'Lato', sans-serif;
 }
 
 .text-section {
-  font-size: 24px;
-  line-height: 32px;
-  font-weight: 500;
+  font-size: 1.5rem;
+  line-height: 2rem;
+  font-weight: 400;
   letter-spacing: 0.5px;
   font-family: $font-secondary;
 
@@ -122,4 +133,9 @@ $font-secondary: 'Lato', sans-serif;
     font-size: 16px;
     line-height: 24px;
   }
+}
+
+button span.v-btn__content {
+  font-family: $font-secondary;
+  font-weight: bold;
 }
